@@ -1,5 +1,10 @@
 2011-01-19  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/gids.c (_gids_hash_create, _gids_user_to_uid):
+	  Replaced calls to getpwnam() with xgetpwnam().
+	* src/munged/xgetpwnam.c, src/munged/xgetpwnam.h: Added.
+	* src/munged/Makefile.am: Added xgetpwnam.c and xgetpwnam.h.
+
 	* config/x_ac_getpwnam.m4: Added _UNIX95 def for _X_AC_GETPWNAM_R_AIX.
 
 2011-01-18  Chris Dunlap  <cdunlap@llnl.gov>
